Add markdown of CRISP-DM for python notebook

--- a/SFO Salary Data Analysis.ipynb
+++ b/SFO Salary Data Analysis.ipynb
@@ -1,31 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Answer the following 4 questions:\n",
-    "#1. How much total salary cost has increased from year 2011 to 2014?\n",
-    "#2. Who was the top-earning employee across all the years?\n",
-    "#3. Which job title earned the most across all the years?\n",
-    "#4. What are the top numbers of jobs across all the years?"
+    "# San Francisco (SFO) Pulic Department Salary Data Analysis\n",
+    "\n",
+    "## 1. Business Understanding\n",
+    "This analysis tries to answer 4 questions about the San Francisco (SFO) public department salary 2011-2014 dataset:\n",
+    "\n",
+    "1. How much total salary cost has increased from year 2011 to 2014?\n",
+    "2. Who was the top-earning employee across all the years?\n",
+    "3. Which job title earned the most across all the years?\n",
+    "4. What are the top jobs in terms of job number across all the years?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Understanding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Program Files (x86)\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3020: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -170,16 +171,37 @@
        "4  2011    NaN  San Francisco    NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import required library and data .csv file\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"Salaries.csv\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(148648, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print dataset shape\n",
+    "\n",
+    "print(df.shape)"
    ]
   },
   {
@@ -387,6 +409,29 @@
     "# Info of dataset\n",
     "\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data Preparation\n",
+    "Since there is no missing TotalPayBenefits value in the dataset, there is no need to do any data cleaning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Modelling (Optional)\n",
+    "There is no modelling involved in this analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.Evaluation"
    ]
   },
   {
@@ -735,6 +780,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Deployment\n",
+    "### Conclusion\n",
+    "#### 1. The total pay and benefits of SFO public department increased by 1,227,753,000.0 (47.3%) dollars from 2011 to 2014.\n",
+    "\n",
+    "#### 2. Top earners during 2011–2014 are: \n",
+    "\n",
+    "The top earner for 2011 is NATHANIEL FORD, GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY, with the total pay and benefits of 567595.43 USD dollars.  \n",
+    "\n",
+    "The top earner for 2012 is Gary Altenberg, Lieutenant, Fire Suppression, with the total pay and benefits of 407274.78 USD dollars.\n",
+    "\n",
+    "The top earner for 2013 is Gregory P Suhr, Chief of Police, with the total pay and benefits of 425815.28 USD dollars. \n",
+    "\n",
+    "The top earner for 2014 is David Shinn, Deputy Chief 3, with the total pay and benefits of 510732.68 USD dollars.\n",
+    "\n",
+    "#### 3. Among all the top 10 earning jobs, the top 3 earning job positions are chief investment officer, chief of fire department, and general manager of metropolitan transit authority, across 2011-2014.\n",
+    "\n",
+    "#### 4. Transit operator, special & registered nurse, custodian and firefighter are the top 4 job with most job numbers in SFO during 2011–2014, followed by recreation leader, deputy sheriff, public service aide-public workers, police officer, and patient care assistant."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -758,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
