Change the markdown for the result

--- a/SFO Salary Data Analysis.ipynb
+++ b/SFO Salary Data Analysis.ipynb
@@ -789,13 +789,13 @@
     "\n",
     "#### 2. Top earners during 2011–2014 are: \n",
     "\n",
-    "The top earner for 2011 is NATHANIEL FORD, GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY, with the total pay and benefits of 567595.43 USD dollars.  \n",
+    "#### The top earner for 2011 is NATHANIEL FORD, GENERAL MANAGER-METROPOLITAN TRANSIT AUTHORITY, with the total pay and benefits of 567595.43 USD dollars.  \n",
     "\n",
-    "The top earner for 2012 is Gary Altenberg, Lieutenant, Fire Suppression, with the total pay and benefits of 407274.78 USD dollars.\n",
+    "#### The top earner for 2012 is Gary Altenberg, Lieutenant, Fire Suppression, with the total pay and benefits of 407274.78 USD dollars.\n",
     "\n",
-    "The top earner for 2013 is Gregory P Suhr, Chief of Police, with the total pay and benefits of 425815.28 USD dollars. \n",
+    "#### The top earner for 2013 is Gregory P Suhr, Chief of Police, with the total pay and benefits of 425815.28 USD dollars. \n",
     "\n",
-    "The top earner for 2014 is David Shinn, Deputy Chief 3, with the total pay and benefits of 510732.68 USD dollars.\n",
+    "#### The top earner for 2014 is David Shinn, Deputy Chief 3, with the total pay and benefits of 510732.68 USD dollars.\n",
     "\n",
     "#### 3. Among all the top 10 earning jobs, the top 3 earning job positions are chief investment officer, chief of fire department, and general manager of metropolitan transit authority, across 2011-2014.\n",
     "\n",
